fixing spacing

--- a/blocks/opco-grid/opco-grid.css
+++ b/blocks/opco-grid/opco-grid.css
@@ -74,6 +74,10 @@
   margin-top: 3rem
 }
 
+.opco-grid-wrapper :is(.mb-12) {
+  margin-bottom: 3rem
+}
+
 .opco-grid-wrapper :is(.\!line-clamp-2) {
   overflow: hidden !important;
   display: -webkit-box !important;
